--- a/app/src/main/res/layout/item_view_pager.xml
+++ b/app/src/main/res/layout/item_view_pager.xml
@@ -59,4 +59,12 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/img_heart"
+        android:visibility="invisible"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_baseline_favorite_24" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
